Fix footer contrast ratio #2

--- a/style/style.css
+++ b/style/style.css
@@ -404,7 +404,7 @@ footer {
 }
 footer, footer a:link, footer a:visited, footer .btn {
 	background-color: #222;
-	color: #888888;
+	color: #adadad;
 }
 footer .btn {
 	line-height: 40px;
